# tesla-invoices

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker.env.example  entrypoint.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml
app/: api.py  auth.py  config.py  downloader.py  emailer.py  main.py  privacy.py  server.py  storage.py
app/static/: index.html  manifest.webmanifest
app/static/css/: style.css
app/static/i18n/: de.json  en.json  languages.json
app/static/js/: app.js  i18n.js  sw.js
scripts/: make_icons.py
tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_downloader.py  test_emailer.py  test_main.py  test_privacy.py  test_server.py  test_storage.py  test_tokens.py  test_translations.py
